<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.learnlib.alex</groupId>
    <artifactId>alex-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Automata Learning Experience (ALEX)</name>
    <description>
        A RESTful application with a fancy web frontend to configure and run automata learning algorithms on websites and web services.
    </description>

    <developers>
        <developer>
            <id>alex.b</id>
            <name>Alexander Bainczyk</name>
            <email>alexander.bainczyk@tu-dortmund.de</email>
        </developer>
        <developer>
            <id>alex.s</id>
            <name>Alexander Schieweck</name>
            <email>alexander.schieweck@tu-dortmund.de</email>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Oliver Bauer</name>
            <email>oliver.bauer@tu-dortmund.de</email>
        </contributor>
        <contributor>
            <name>Dr. Johannes Neubauer</name>
            <email>johannes.neubauer@tu-dortmund.de</email>
        </contributor>
    </contributors>
    <organization>
        <name>Chair for Programming Systems at TU Dortmund University, Germany</name>
        <url>http://ls5-www.cs.tu-dortmund.de/</url>
    </organization>

    <scm>
        <developerConnection>scm:svn:https://projekte.itmc.tu-dortmund.de/svn/learnlibweb</developerConnection>
        <!--<url></url>-->
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>Redmine</system>
        <url>https://projekte.itmc.tu-dortmund.de/projects/learnlibweb/issues</url>
    </issueManagement>

    <modules>
        <module>api</module>
        <module>processors</module>
        <module>main</module>
        <module>standalone</module>
    </modules>

    <!--===== properties ======-->
    <properties>
        <!-- general -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- plugin versions -->
        <compiler-plugin.version>3.1</compiler-plugin.version>
        <dependency-plugin.version>2.10</dependency-plugin.version>
        <jar-plugin.version>2.6</jar-plugin.version>
        <javadoc-plugin.version>2.10.1</javadoc-plugin.version>
        <javadoc-umlgraph.version>5.6.6</javadoc-umlgraph.version>
        <surefire-plugin.version>2.18.1</surefire-plugin.version>
        <surefire-report.version>2.18.1</surefire-report.version>
        <war-plugin.version>2.6</war-plugin.version>

        <checkstyle.version>2.15</checkstyle.version>
        <cobertura.version>2.7</cobertura.version>
        <findbugs.version>3.0.0</findbugs.version>
        <pmd.version>3.4</pmd.version>
        <versions-plugin.version>2.1</versions-plugin.version>

        <!-- dependencies versions -->
        <jersey.version>2.17</jersey.version>
        <hibernate.version>5.1.3.Final</hibernate.version>
        <learnlib.version>0.11.2</learnlib.version>
        <automatalib.version>0.5.2</automatalib.version>
        <selenium.version>2.45.0</selenium.version>
        <jetty.version>9.2.10.v20150310</jetty.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${jar-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${dependency-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.4</version>
                <dependencies>
                    <dependency>
                        <groupId>lt.velykis.maven.skins</groupId>
                        <artifactId>reflow-velocity-tools</artifactId>
                        <version>1.1.1</version>
                    </dependency>
                    <!-- Reflow skin requires Velocity >= 1.7  -->
                    <dependency>
                        <groupId>org.apache.velocity</groupId>
                        <artifactId>velocity</artifactId>
                        <version>1.7</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <!--===== reports ======-->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>summary</report>
                            <report>scm</report>
                            <report>issue-tracking</report>
                            <report>project-team</report>
                            <report>modules</report>
                            <report>dependencies</report>
                            <report>dependency-convergence</report>
                            <report>dependency-management</report>
                            <report>plugin-management</report>
                            <report>plugins</report>

                            <!--<report>index</report>-->
                            <!--<report>dependency-info</report> -->
                            <!--<report>cim</report> -->
                            <!--<report>distribution-management</report> -->
                            <!--<report>license</report> -->
                            <!--<report>mailing-list</report> -->
                        </reports>
                    </reportSet>
                </reportSets>
                <configuration>
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-plugin.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <!-- javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc-plugin.version}</version>
                <configuration>
                    <!-- UML -->
                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
                    <docletArtifact>
                        <groupId>org.umlgraph</groupId>
                        <artifactId>umlgraph</artifactId>
                        <version>${javadoc-umlgraph.version}</version>
                    </docletArtifact>
                    <additionalparam>
                        -all -hide java.* -collapsible -inferdep -collpackages java.util.*
                    </additionalparam>
                    <additionalparam>-Xdoclint:none</additionalparam>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <!-- checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <configLocation>src/site/resources/checkstyle.xml</configLocation>
                    <suppressionsLocation>src/site/resources/checkstyle-suppressions.xml</suppressionsLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <!-- PMD -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.version}</version>
                <configuration>
                    <minimumTokens>75</minimumTokens>
                </configuration>
            </plugin>

            <!-- Findbugs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>${findbugs.version}</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Medium</threshold>
                    <includeTests>true</includeTests>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>
